# blog-app

./: .gitignore  pyproject.toml
services/api/: pyproject.toml
services/api/src/: main.py
services/api/src/api/: blog.py  models.py
services/blog/: README.md  pyproject.toml
services/blog/scripts/: gen-proto.sh
services/blog/src/: main.py
services/blog/src/blog/: models.py  repository.py  service.py
